Comment Added and some alignment fixed

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,9 @@ body{
     margin: 0;
     outline: 0;
 }
+a{
+    text-decoration: none;
+}
 
 
 .home{
@@ -275,7 +278,42 @@ body{
                 background: #ffc1c1;
             }
         }
-
+        .comment{
+            width: 30%;
+            height: 2.5rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            font-family: Product sans;
+            font-size: 1rem;
+            border: 0;
+            border-radius: 50px;
+            background: #eeeeee;
+            margin-bottom: 1.1rem;
+            //text-align: center;
+        }
+        .postComntBtn{
+            background: #eeeeee;
+            height: 2.8rem;
+            font-size: 1rem;
+            width: 2.8rem;
+            text-decoration: none;
+            display: grid;
+            place-items: center;
+            color: $titleTxt;
+            border-radius: 100%;
+            margin-bottom: 1.3rem;
+            margin-left: .8rem;
+            transition: background 280ms, color 280ms;
+            .c_post_logo{
+                margin-bottom: .15rem;
+                margin-right: .1rem;
+            }
+        }
+        .postComntBtn:focus,
+        .postComntBtn:hover{
+            color: #eeeeee;
+            background: $titleTxt;
+        }
 
 
     }
